--- a/pod.yaml
+++ b/pod.yaml
@@ -1,10 +1,9 @@
 apiVersion: v1
-kind: Pod
+kind: pod
 metadata:
   name: nginx
 spec:
-  containers:
   - name: nginx
-    image: nginx:1.14.2
+    image: nginx
     ports:
-    - containerPort: 80
+    - containerport: 80
